syntax = "proto3";

package system;

message NAccount {
    uint64 account_id = 1;
}