syntax = "proto3";

package system;

message NNode {
    uint64 node_id = 1;
    string address = 2;
    int32 port = 3;
    string database = 4;
    string user = 5;
    string password = 6;
    uint64 replica_of = 7;
    string region = 8;
    string zone = 9;
    bool is_alive = 10;
}